src/test/resources/syntax/invalid/target_annotation_unpick_v3.unpick
unpick v3

target_annotation foo.Bar baz
